--- a/ng2/app/heroes/heroes.component.html
+++ b/ng2/app/heroes/heroes.component.html
@@ -1,5 +1,8 @@
+<toh-hero [hero]="selectedHero"></toh-hero>
 <ul class="heroes">
-	<li *ngFor="let hero of heroes ">
-		{{hero.name}}
+	<li *ngFor="let hero of heroes" (click)="onSelect(hero)" 
+		[class.selected]="hero===selectedHero"
+	>
+		<span class="badge">{{hero.id}}</span>	{{hero.c_name}}
 	</li>
 </ul>
