--- a/ng2/app/heroes/heroes.component.html
+++ b/ng2/app/heroes/heroes.component.html
@@ -3,6 +3,7 @@
 	<li *ngFor="let hero of heroes" (click)="onSelect(hero)" 
 		[class.selected]="hero===selectedHero"
 	>
-		<span class="badge">{{hero.id}}</span>	{{hero.c_name}}
+		<span class="badge">{{hero.id}}</span>	{{hero.name}}
+
 	</li>
 </ul>
